# inference-verification

./: .env  .env.example  .gitignore  README.md  cspell.json  install.sh  main.py  pyproject.toml  run-all.sh  run-dev.sh
components/gateway/: main.py
components/host_cluster/: main.py
components/host_gateway/: .env  main.py
components/lib/: inference.py  secure_envelope.py  signed_envelope.py  utils.py
components/main_cluster/: main.py
components/network_logger/: main.py
components/network_tap/: main.py
components/recomputation_cluster/: .env.example  main.py
dashboard/: README.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  wrangler.jsonc
dashboard/src/: app.d.ts  env.ts
dashboard/src/lib/: utils.ts
dashboard/src/lib/components/ui/button/: button.svelte
dashboard/src/lib/components/ui/card/: card-title.svelte
dashboard/src/routes/: +layout.svelte  +page.svelte  Chat.svelte  HostCluster.svelte  MainCluster.svelte  RecomputationCluster.svelte  layout.css
dashboard/src/routes/chat/: +page.svelte
dashboard/src/routes/host-cluster/: +page.svelte
dashboard/src/routes/host-cluster-2/: +page.svelte
dashboard/src/routes/main-cluster/: +page.svelte
dashboard/src/routes/main-cluster-2/: +page.svelte
dashboard/src/routes/qr/: +page.server.ts
dashboard/src/routes/recomputation-cluster/: +page.svelte
dashboard/src/routes/set-key/: +page.svelte
