[project]
name = "inference-verification"
version = "0.1.0"
description = "inference verification prototype demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "openai>=2.40.0",
    "python-socketio>=5.16.2",
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
